# Sui-onchain-crawler

./: Cargo.toml  LICENSE  README.md
db/migrations/: init.sql
src/: main.rs  prelude.rs
